<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!-- WARNING: Eclipse auto-generated file.
              Any modifications will be overwritten.
              To include a user specific buildfile here, simply create one in the same
              directory with the processing instruction <?eclipse.ant.import?>
              as the first entry and export the buildfile again. --><project basedir="." default="build" name="JustThinkIt">
    <property environment="env"/>
    <property name="ECLIPSE_HOME" value="../../../eclipse/java-2019-09/eclipse/"/>
    <property name="debuglevel" value="source,lines,vars"/>
    <property name="target" value="12"/>
    <property name="source" value="12"/>
    <path id="JavaFX11.userclasspath">
        <pathelement location="../../../Desktop/Java/javafx-sdk-11.0.2/lib/javafx.base.jar"/>
        <pathelement location="../../../Desktop/Java/javafx-sdk-11.0.2/lib/javafx.controls.jar"/>
        <pathelement location="../../../Desktop/Java/javafx-sdk-11.0.2/lib/javafx.fxml.jar"/>
        <pathelement location="../../../Desktop/Java/javafx-sdk-11.0.2/lib/javafx.graphics.jar"/>
        <pathelement location="../../../Desktop/Java/javafx-sdk-11.0.2/lib/javafx.media.jar"/>
        <pathelement location="../../../Desktop/Java/javafx-sdk-11.0.2/lib/javafx.swing.jar"/>
        <pathelement location="../../../Desktop/Java/javafx-sdk-11.0.2/lib/javafx.web.jar"/>
        <pathelement location="../../../Desktop/Java/javafx-sdk-11.0.2/lib/javafx-swt.jar"/>
    </path>
    <path id="JavaFX SDK.libraryclasspath"/>
    <path id="JustThinkIt.classpath">
        <pathelement location="bin"/>
        <path refid="JavaFX11.userclasspath"/>
        <pathelement location="../../../../../Program Files (x86)/MySQL/Connector J 8.0/mysql-connector-java-8.0.19.jar"/>
        <path refid="JavaFX SDK.libraryclasspath"/>
    </path>
    <path id="run.JustThinkIt.classpath">
        <path refid="JustThinkIt.classpath"/>
        <path refid="JavaFX11.userclasspath"/>
        <pathelement location="../../../../../Program Files (x86)/MySQL/Connector J 8.0/mysql-connector-java-8.0.19.jar"/>
        <path refid="JavaFX SDK.libraryclasspath"/>
    </path>
    <target name="init">
        <mkdir dir="bin"/>
        <copy includeemptydirs="false" todir="bin">
            <fileset dir="src">
                <exclude name="**/*.launch"/>
                <exclude name="**/*.xtend"/>
                <exclude name="**/*.java"/>
            </fileset>
        </copy>
    </target>
    <target name="clean">
        <delete dir="bin"/>
    </target>
    <target depends="clean" name="cleanall"/>
    <target depends="build-subprojects,build-project" name="build"/>
    <target name="build-subprojects"/>
    <target depends="init" name="build-project">
        <echo message="${ant.project.name}: ${ant.file}"/>
        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
            <src path="src"/>
            <classpath refid="JustThinkIt.classpath"/>
        </javac>
    </target>
    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
        <copy todir="${ant.library.dir}">
            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
        </copy>
        <unzip dest="${ant.library.dir}">
            <patternset includes="jdtCompilerAdapter.jar"/>
            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
        </unzip>
    </target>
    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
        <antcall target="build"/>
    </target>
    <target name="JustThinkIt">
        <java classname="application.Main" failonerror="true" fork="yes">
            <jvmarg line="--module-path &quot;C:\Users\Admin\Desktop\Java\javafx-sdk-11.0.2\lib&quot; --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.graphics&#13;&#10;--add-exports javafx.base/com.sun.javafx.collections=ALL-UNNAMED&#13;&#10;--add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED"/>
            <classpath refid="run.JustThinkIt.classpath"/>
        </java>
    </target>
</project>
